--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.6",
     "passport-jwt": "^4.0.0",
+    "mapped-types": "0.0.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
