--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^8.0.2",
@@ -38,8 +39,10 @@
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "mapped-types": "0.0.1",
     "nodemailer": "^6.7.1",
+    "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
     "qrcode": "^1.4.4",
