--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "mapped-types": "0.0.1",
     "nodemailer": "^6.7.1",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
     "pg": "^8.7.1",
     "qrcode": "^1.4.4",
     "reflect-metadata": "^0.1.13",
