--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "@nestjs/typeorm": "^8.0.2",
     "@sendgrid/mail": "^7.6.0",
     "@types/bcrypt": "^5.0.0",
-    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
