--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,48 @@
 # Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
 # Note that environment variables can be set in several places
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
+image: docker:git
+
+services:
+  - docker:dind
+
+
 stages:
-- test
-sast:
-  stage: test
-include:
-- template: Security/SAST.gitlab-ci.yml
+  - build
+  # - deploy
+
+variables:
+  BASE_TAG_NAME: $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG
+
+stage: build
+script:
+  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+  - docker build -t $BASE_TAG_NAME:latest .
+  - docker push  $BASE_TAG_NAME:latest
+only:
+  - placideh_deployment
+
+# before_script:
+#   # Check for ssh-agent + rsync and install if not present
+#   - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y  )'
+#   - 'which rsync || ( apt-get update -y && apt-get install rsync -y )'
+#   - eval $(ssh-agent -s)
+#   # Inject the remote's private key
+#   - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+#   - mkdir -p ~/.ssh
+#   - chmod 700 ~/.ssh
+#   # Append keyscan output into known hosts
+#   - ssh-keyscan $SERVER_IP >> ~/.ssh/known_hosts
+#   - chmod 644 ~/.ssh/known_hosts
+#   - npm install
+#   - npm run build
+
+# deploy:
+#   stage: deploy
+#   script:
+#     - rsync -avuz --exclude=".*" $CI_PROJECT_DIR $SERVER_USER@$SERVER_IP:~
+#     # Non interactive ssh gracefully reloads server
+#     - ssh $SERVER_USER@$SERVER_IP '. /etc/profile; pm2 reload all'
+#   only:
+#     # Trigger deployments only from master branch
+#     - master
