--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ deploy:
   script:
     - rsync --rsync-path=/usr/bin/rsync --delete -avuz --exclude=".*" $SERVER_USER@$PLACIDE_SERVER_IP:~
     - ssh $SERVER_USER@$PLACIDE_SERVER_IP "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY &&
-      echo "$ENV_VARS" | tr ' ' '\n' > $DEV_SERVER_PATH/.env &&
+      echo "$PLACIDE_ENV" | tr ' ' '\n' > .env &&
       docker image rm -f $BASE_TAG_NAME:latest &&
       docker pull $BASE_TAG_NAME:latest &&
       docker-compose -f docker-compose.yml down -v && docker-compose -f docker-compose.yml up -d"
