--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,51 @@
 # Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
 # Note that environment variables can be set in several places
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
+image: docker:git
+
+services:
+  - docker:dind
+
+
 stages:
-- test
-sast:
-  stage: test
-include:
-- template: Security/SAST.gitlab-ci.yml
+  - build
+  - deploy
+
+variables:
+  BASE_TAG_NAME: $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG
+
+build:
+  stage: build
+  script:
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+    - docker build -t $BASE_TAG_NAME:latest .
+    - docker push  $BASE_TAG_NAME:latest
+  only:
+    - Edmond-deployment
+
+before_script:
+  # Check for ssh-agent + rsync and install if not present
+  - 'which ssh-agent || ( apk update && apk add openssh-client  )'
+  - 'which rsync || ( apk update && apk add rsync )'
+  - eval $(ssh-agent -s)
+  # Inject the remote's private key
+  - echo "$EDMOND_SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+  - mkdir -p ~/.ssh
+  - chmod 700 ~/.ssh
+  # Append keyscan output into known hosts
+  - ssh-keyscan $EDMOND_SERVER_IP >> ~/.ssh/known_hosts
+  - chmod 644 ~/.ssh/known_hosts
+  
+
+deploy:
+  stage: deploy
+  script:
+    - rsync --rsync-path=/usr/bin/rsync --delete -avuz --exclude=".*" $SERVER_USER@$EDMOND_SERVER_IP:~
+    - ssh $SERVER_USER@$EDMOND_SERVER_IP "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY &&
+      echo "$EDMOND_ENV" | tr ' ' '\n' > .env &&
+      docker image rm -f $BASE_TAG_NAME:latest &&
+      docker pull $BASE_TAG_NAME:latest &&
+      docker-compose -f docker-compose.yml down -v && docker-compose -f docker-compose.yml up -d"
+  only:
+    # Trigger deployments only from master branch
+    - Edmond-deployment
