--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,43 +1,60 @@
+# You can override the included template(s) by including variable overrides
+# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
+# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/#customizing-settings
+# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
+# Note that environment variables can be set in several places
+# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
+image: docker:git
+
+services:
+  - docker:dind
+
+
 stages:
   - build
-  - deploy-stage
+  - deploy
 
 variables:
-  VARIABLE_DATA: Gitlab-CI-YAML
+  BASE_TAG_NAME: $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG
+  SHOWAPP_PATH: /root/showapp
 
 build:
   stage: build
-  image: docker:18-git
-  services:
-    - docker:18-dind
   script:
-    # get node app version from package.json for use in tagging docker image
-    - apk update && apk add jq
-    - export VERSION=`jq -r ".version" < ./package.json`
-    # login to docker
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    # build and tag docker image
-    - docker build -t $CI_REGISTRY_IMAGE:$VERSION -t $CI_REGISTRY_IMAGE:latest .
-    # publish finished image
-    - docker push $CI_REGISTRY_IMAGE:$VERSION
-    - docker push $CI_REGISTRY_IMAGE:latest
-  only: 
+    - docker build -t $BASE_TAG_NAME:latest .
+    - docker push  $BASE_TAG_NAME:latest
+  only:
     - placideh_deployment
 
-deploy-stage:
-  stage: deploy-stage
-  image: alpine:latest
+before_script:
+  # Check for ssh-agent + rsync and install if not present
+  - 'which ssh-agent || ( apk update && apk add openssh-client  )'
+  - 'which rsync || ( apk update && apk add rsync )'
+  - eval $(ssh-agent -s)
+  # Inject the remote's private key
+  - echo "$PLACIDE_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+  - mkdir -p ~/.ssh
+  - chmod 700 ~/.ssh
+  # Append keyscan output into known hosts
+  - ssh-keyscan $PLACIDE_SERVER_IP >> ~/.ssh/known_hosts
+  - chmod 644 ~/.ssh/known_hosts
+  
+
+deploy:
+  stage: deploy
   script:
-    - chmod og= $PLACIDE_PRIVATE_KEY
-    - apk update && apk add openssh-client
-    # stop existing docker container & remove images
-    - ssh -i $PLACIDE_PRIVATE_KEY -o StrictHostKeyChecking=no $SERVER_USER@$PLACIDE_SERVER_IP "docker stop $CI_PROJECT_NAME || true"
-    - ssh -i $PLACIDE_PRIVATE_KEY -o StrictHostKeyChecking=no $SERVER_USER@$PLACIDE_SERVER_IP "docker rm $CI_PROJECT_NAME || true"
-    - ssh -i $PLACIDE_PRIVATE_KEY -o StrictHostKeyChecking=no $SERVER_USER@$PLACIDE_SERVER_IP "docker image rm $CI_REGISTRY_IMAGE:latest || true"
-    # pull new container
-    - ssh -i $PLACIDE_PRIVATE_KEY -o StrictHostKeyChecking=no $SERVER_USER@$PLACIDE_SERVER_IP "docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY"
-    - ssh -i $PLACIDE_PRIVATE_KEY -o StrictHostKeyChecking=no $SERVER_USER@$PLACIDE_SERVER_IP "docker pull $CI_REGISTRY_IMAGE:latest"
-    # run new container
-    - ssh -i $PLACIDE_PRIVATE_KEY -o StrictHostKeyChecking=no $SERVER_USER@$PLACIDE_SERVER_IP "docker run -d --restart unless-stopped --name $CI_PROJECT_NAME -p 8882:3000 -e "variableData=Docker-Run-Command" $CI_REGISTRY_IMAGE:latest"
-  only: 
-    - placideh_deployment 
+    - rsync --rsync-path=/usr/bin/rsync --delete -avuz --exclude=".*" /$CI_PROJECT_DIR/docker-compose.yml $SERVER_USER@$PLACIDE_SERVER_IP:$SHOWAPP_PATH
+    - ssh $SERVER_USER@$PLACIDE_SERVER_IP "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY &&
+      echo "$PLACIDE_ENV" | tr ' ' '\n' > $SHOWAPP_PATH/.env &&
+      docker image rm -f $BASE_TAG_NAME:latest &&
+      docker pull $BASE_TAG_NAME:latest &&
+      cd $SHOWAPP_PATH &&
+      ls -la &&
+      docker-compose -f docker-compose.yml down -v && docker-compose -f docker-compose.yml up -d"
+    - sudo docker-compose -f docker-compose.yml build --no-cache
+    - sudo docker-compose -f docker-compose.yml up -d
+
+  only:
+    # Trigger deployments only from master branch
+    - placideh_deployment
