add path of app in server

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ stages:
 
 variables:
   BASE_TAG_NAME: $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG
+  SHOWAPP_PATH: /root/showapp/
 
 build:
   stage: build
@@ -43,11 +44,13 @@ before_script:
 deploy:
   stage: deploy
   script:
-    - rsync --rsync-path=/usr/bin/rsync --delete -avuz --exclude=".*" $SERVER_USER@$AMI_PUBLIC_SERVER_IP:~
+    - rsync --rsync-path=/usr/bin/rsync --delete -avuz --exclude=".*" $SERVER_USER@$AMI_PUBLIC_SERVER_IP:$SHOWAPP_PATH
     - ssh $SERVER_USER@$AMI_PUBLIC_SERVER_IP "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY &&
-      echo "$AMI_ENV" | tr ' ' '\n' > .env &&
+      echo "$AMI_ENV" | tr ' ' '\n' > $SHOWAPP_PATH/.env &&
       docker image rm -f $BASE_TAG_NAME:latest &&
       docker pull $BASE_TAG_NAME:latest &&
+      cd $SHOWAPP_PATH &&
+      ls -la &&
       docker-compose -f docker-compose.yml down -v && docker-compose -f docker-compose.yml up -d"
   only:
     # Trigger deployments only from my branch
