--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build:
     - docker build -t $BASE_TAG_NAME:latest .
     - docker push  $BASE_TAG_NAME:latest
   only:
-    - placideh_deployment
+    - ami-deployment
 
 before_script:
   # Check for ssh-agent + rsync and install if not present
