--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,8 +44,8 @@ before_script:
 deploy:
   stage: deploy
   script:
-    - rsync --rsync-path=/usr/bin/rsync --delete -avuz --exclude=".*" $SERVER_USER@$AMI_PUBLIC_SERVER_IP:$SHOWAPP_PATH
-    - ssh $SERVER_USER@$AMI_PUBLIC_SERVER_IP "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY &&
+    - rsync --rsync-path=/usr/bin/rsync --delete -avuz --exclude=".*" $SERVER_USER@$AMI_SERVER_IP:$SHOWAPP_PATH
+    - ssh $SERVER_USER@$AMI_SERVER_IP "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY &&
       echo "$AMI_ENV" | tr ' ' '\n' > $SHOWAPP_PATH/.env &&
       docker image rm -f $BASE_TAG_NAME:latest &&
       docker pull $BASE_TAG_NAME:latest &&
