--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ before_script:
   - mkdir -p ~/.ssh
   - chmod 700 ~/.ssh
   # Append keyscan output into known hosts
-  - ssh-keyscan $AMI_PUBLIC_SERVER_IP >> ~/.ssh/known_hosts
+  - ssh-keyscan $AMI_SERVER_IP >> ~/.ssh/known_hosts
   - chmod 644 ~/.ssh/known_hosts
   
 
