--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,18 +14,20 @@ services:
 
   app:
     container_name: showapp_api
-    build: .
+    image: registry.gitlab.com/tas11/showapp/placideh-deployment
     depends_on:
       - postgres
     
     ports:
       - "4000:3000"
-    environment:
-      POSTGRES_HOST: showapp_database
-      POSTGRES_PORT: ${POSTGRES_PORT}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+    env_file:
+      - ./.env
+    # environment:
+    #   POSTGRES_HOST: showapp_database
+    #   POSTGRES_PORT: ${POSTGRES_PORT}
+    #   POSTGRES_USER: ${POSTGRES_USER}
+    #   POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    #   POSTGRES_DB: ${POSTGRES_DB}
     restart: always
 
 
